--- a/frontend/src/pages/CartPage.css
+++ b/frontend/src/pages/CartPage.css
@@ -23,7 +23,7 @@
   }
   .cart-title {
     width: fit-content;
-    margin: auto;
+    margin: .5em auto;
   }
 
   .card-title {
@@ -41,8 +41,11 @@
   .card-count {
     width: fit-content;
     padding: .2em;
-    margin-right: .3em;
+    margin-right: .1em;
     background-color: white;
+  }
+  .product-price {
+    color: #008;
   }
 
   .cart-page {
@@ -57,6 +60,7 @@
   }
   .summary-component {
     border: .4px solid black;
+    padding-top: 1em;
   }
   .summary-title {
     width: fit-content;
@@ -121,7 +125,23 @@ a.button {
   margin-top: 1em;
 }
 .list-group-item {
+  display: flex;
+  justify-content: space-between;
   background-color: #fff5;
   width: 90%;
   margin: auto;
+}
+
+.cart-value-label {
+  /* font-size: 18px; */
+  font-weight: bold;
+  background-color: #fff0;
+}
+.cart-value {
+  background-color: #fff0;
+}
+
+.checkout-btn {
+  width: 50%;
+  margin: 1em auto;
 }
